--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
 			rel="stylesheet" />
-		<link rel="stylesheet" href="/Home/css/style.css" />
+		<link rel="stylesheet" href="/LivingWithGraceCC/Home/css/style.css" />
 	</head>
 	<body>
 		<!-- Header/Navigation -->
@@ -635,6 +635,6 @@
 				</p>
 			</div>
 		</footer>
-		<script src="/Home/js/script.js" defer></script>
+		<script src="/LivingWithGraceCC/Home/js/script.js" defer></script>
 	</body>
 </html>
