--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
 			rel="stylesheet" />
-		<link rel="stylesheet" href="/Contact/css/style.css" />
+		<link rel="stylesheet" href="/LivingWithGraceCC/Contact/css/style.css" />
 	</head>
 	<body>
 		<!-- Header/Navigation -->
@@ -363,6 +363,6 @@
 			</div>
 		</footer>
 
-		<script src="/Contact/js/script.js"></script>
+		<script src="/LivingWithGraceCC/Contact/js/script.js"></script>
 	</body>
 </html>
