--- a/post.html
+++ b/post.html
@@ -9,7 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
 			rel="stylesheet" />
-		<link rel="stylesheet" href="/Post/css/style.css" />
+		<link rel="stylesheet" href="/LivingWithGraceCC/Post/css/style.css" />
 
 		<!-- Dynamically load when anything is moved or pressed -->
 		<link rel="stylesheet" href="/Booking/css/style.css" />
@@ -319,6 +319,6 @@
 			</div>
 		</footer>
 
-		<script src="/Post/js/script.js"></script>
+		<script src="/LivingWithGraceCC/Post/js/script.js"></script>
 	</body>
 </html>
