--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
 			rel="stylesheet" />
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="/LivingWithGraceCC/style.css" />
 	</head>
 	<body>
 		<!-- Header/Navigation -->
@@ -174,6 +174,6 @@
 				</p>
 			</div>
 		</footer>
-		<script src="/Home/js/script.js"></script>
+		<script src="/LivingWithGraceCC/Home/js/script.js"></script>
 	</body>
 </html>
