--- a/contactus.html
+++ b/contactus.html
@@ -20,7 +20,7 @@
 					<picture>
 						<source srcset="" media="" />
 						<img
-							src="/media/Desktop Logo.png"
+							src="/LivingWithGraceCC/media/Desktop Logo.png"
 							alt="Living With Grace Logo"
 							class="navLogo" />
 					</picture>
@@ -268,7 +268,7 @@
 							<picture>
 								<source srcset="" media="" />
 								<img
-									src="/media/Desktop Logo.png"
+									src="/LivingWithGraceCC/media/Desktop Logo.png"
 									alt="Living With Grace Logo" />
 							</picture>
 						</a>
