--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Home Page</title>
-		<link rel="shortcut icon" href="/media/logo.jpg" type="image/x-icon" />
+		<link rel="shortcut icon" href="/LivingWithGraceCC/media/logo.jpg" type="image/x-icon" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -21,7 +21,7 @@
 					<picture>
 						<source srcset="" media="" />
 						<img
-							src="/media/Desktop Logo.png"
+							src="/LivingWithGraceCC/media/Desktop Logo.png"
 							alt="Living With Grace Logo"
 							class="navLogo" />
 					</picture>
@@ -82,7 +82,7 @@
 						</div>
 						<div class="imgCard-Container">
 							<div class="imgCard"></div>
-							<img src="/media/leafs.png" alt="leaf" class="imgB" />
+							<img src="/LivingWithGraceCC/media/leafs.png" alt="leaf" class="imgB" />
 						</div>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 				<div class="aboutUs container">
 					<div class="imgCard-Container">
 						<div class="imgCard"></div>
-						<img src="/media/leafs.png" alt="leaf" class="imgT" />
+						<img src="/LivingWithGraceCC/media/leafs.png" alt="leaf" class="imgT" />
 					</div>
 					<div class="aboutUsContent">
 						<div class="headingText">
@@ -225,7 +225,7 @@
 										</svg>
 									</a>
 								</div>
-								<img src="/media/leafs.png" alt="leafs" />
+								<img src="/LivingWithGraceCC/media/leafs.png" alt="leafs" />
 							</div>
 							<!-- Card -->
 							<div class="benefitsCard">
@@ -396,7 +396,7 @@
 								<li>Personalized Support</li>
 							</ul>
 							<a href="#" class="btn">Select Package</a>
-							<img src="/media/leafs.png" alt="leaf" />
+							<img src="/LivingWithGraceCC/media/leafs.png" alt="leaf" />
 						</div>
 						<!-- Card -->
 						<div class="serviceCard">
@@ -431,7 +431,7 @@
 						<div class="blogCard">
 							<div class="blogImg">
 								<img
-									src="/media/christopher-lemercier-12yvdCiLaVE-unsplash.jpg"
+									src="/LivingWithGraceCC/media/christopher-lemercier-12yvdCiLaVE-unsplash.jpg"
 									alt="" />
 							</div>
 							<div class="blogDate">
@@ -459,7 +459,7 @@
 						<div class="blogCard">
 							<div class="blogImg">
 								<img
-									src="/media/nathan-dumlao-Wr3comVZJxU-unsplash.jpg"
+									src="/LivingWithGraceCC/media/nathan-dumlao-Wr3comVZJxU-unsplash.jpg"
 									alt="" />
 							</div>
 							<div class="blogDate">
@@ -486,7 +486,7 @@
 						<!-- Card -->
 						<div class="blogCard">
 							<div class="blogImg">
-								<img src="/media/mi-pham-FtZL0r4DZYk-unsplash.jpg" alt="" />
+								<img src="/LivingWithGraceCC/media/mi-pham-FtZL0r4DZYk-unsplash.jpg" alt="" />
 							</div>
 							<div class="blogDate">
 								<svg
@@ -541,7 +541,7 @@
 							<picture>
 								<source srcset="" media="" />
 								<img
-									src="/media/Desktop Logo.png"
+									src="/LivingWithGraceCC/media/Desktop Logo.png"
 									alt="Living With Grace Logo" />
 							</picture>
 						</a>
