--- a/post.html
+++ b/post.html
@@ -23,7 +23,7 @@
 					<picture>
 						<source srcset="" media="" />
 						<img
-							src="/media/Desktop Logo.png"
+							src="/LivingWithGraceCC/media/Desktop Logo.png"
 							alt="Living With Grace Logo"
 							class="navLogo" />
 					</picture>
@@ -115,7 +115,7 @@
 						<div class="blogCard">
 							<div class="blogImg">
 								<img
-									src="/media/christopher-lemercier-12yvdCiLaVE-unsplash.jpg"
+									src="/LivingWithGraceCC/media/christopher-lemercier-12yvdCiLaVE-unsplash.jpg"
 									alt="" />
 							</div>
 							<div class="blogDate">
@@ -143,7 +143,7 @@
 						<div class="blogCard">
 							<div class="blogImg">
 								<img
-									src="/media/nathan-dumlao-Wr3comVZJxU-unsplash.jpg"
+									src="/LivingWithGraceCC/media/nathan-dumlao-Wr3comVZJxU-unsplash.jpg"
 									alt="" />
 							</div>
 							<div class="blogDate">
@@ -170,7 +170,7 @@
 						<!-- Card -->
 						<div class="blogCard">
 							<div class="blogImg">
-								<img src="/media/mi-pham-FtZL0r4DZYk-unsplash.jpg" alt="" />
+								<img src="/LivingWithGraceCC/media/mi-pham-FtZL0r4DZYk-unsplash.jpg" alt="" />
 							</div>
 							<div class="blogDate">
 								<svg
@@ -224,7 +224,7 @@
 							<picture>
 								<source srcset="" media="" />
 								<img
-									src="/media/Desktop Logo.png"
+									src="/LivingWithGraceCC/media/Desktop Logo.png"
 									alt="Living With Grace Logo" />
 							</picture>
 						</a>
