--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<a href="#blog">Blog</a>
 					</li>
 					<li>
-						<a href="/contactus.html">Contact Us</a>
+						<a href="/LivingWithGraceCC/contactus.html">Contact Us</a>
 					</li>
 				</ul>
 				<!-- Mobile Menu -->
